oneshots-httproute-check.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foundry-oneshot-games
  namespace: foundry-vtt
  labels:
    app: foundry-vtt
    instance: oneshot-games
  annotations:
    foundry.platform/instance: oneshot-games
    foundry.platform/is-active: "true"
spec:
  hostnames:
    - oneshots.foundry.lab.jake-watson.co.uk
  parentRefs:
    - name: cilium-gateway-external
      namespace: default
  rules:
    - backendRefs:
        - name: foundry-oneshot-games
          port: 80
